--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
+<!-- res/values/strings.xml -->
 <resources>
-    <string name="app_name">MyUnDivorcer</string>
+    <string name="home_activity_title">Home</string>
+    <string name="wishlists_activity_title">Wishlists</string>
+    <string name="friends_activity_title">Friends</string>
+    <string name="login_activity_title">Login</string>
+    <string name="register_activity_title">Register</string>
+    <string name="app_name">ShopEase</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!-- Other string resources -->
 </resources>
