--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="friends_activity_title">Friends</string>
     <string name="login_activity_title">Login</string>
     <string name="register_activity_title">Register</string>
-    <string name="app_name">ShopEase</string>
+    <string name="app_name">myundivorcer</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
